--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -17,27 +17,28 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        android:autofillHints="@string/prompt_email"
+        android:autofillHints="Enter Your Name"
         android:backgroundTint="#F3F3F3"
-        android:hint="@string/prompt_email"
+        android:hint="@string/Username"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textColorHint="#B0FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/Logintxt" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="24dp"
         android:autofillHints="@string/prompt_password"
         android:backgroundTint="#FFFFFF"
@@ -47,7 +48,8 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textColorHint="#B0FFFFFF"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -91,14 +93,14 @@
         android:id="@+id/Logintxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
         android:text="Login"
         android:textColor="#FFFEFE"
         android:textSize="48sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
